fix: attempt to minimize fontawesome icon jumpiness

--- a/css/views2.scss
+++ b/css/views2.scss
@@ -177,8 +177,14 @@ a.button.button-events-more-info {
 
 	i,
 	svg {
-		min-width: 0.75em;
+		min-width: 0.8em;
 		margin-right: 0.5em;
+	}
+
+	i {
+		display: inline-block;
+		width: 0.8em;
+		line-height: 1;
 	}
 }
 
